--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,13 @@ repos:
     rev: 21.9b0
     hooks:
     -   id: black
+        args: ["."]
 
 -   repo: https://github.com/pycqa/isort
     rev: 5.9.3
     hooks:
     - id: isort
-      args: ["--profile", "black", "--filter-files"]
+      args: ["--profile", "black", "--filter-files", "."]
 
 -   repo: https://github.com/asottile/pyupgrade
     rev: v2.29.0
