--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     rev: 21.9b0
     hooks:
     -   id: black
-        args: ["."]
+        args: ["--safe"]
 
 -   repo: https://github.com/pycqa/isort
     rev: 5.9.3
