--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "GNU General Public License v3.0"
 [tool.poetry.dependencies]
 python = ">=3.7,<3.11"
 opencv-python = "^4.5.4"
+mediapipe = "^0.8.8"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
