--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+absl-py==0.15.0
+attrs==21.2.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+cycler==0.11.0; python_version >= "3.7"
+kiwisolver==1.3.2; python_version >= "3.7"
+matplotlib==3.4.3; python_version >= "3.7"
+mediapipe==0.8.8.1
 numpy==1.21.3; python_version >= "3.7" and python_version < "3.11"
+opencv-contrib-python==4.5.4.58; python_version >= "3.6"
 opencv-python==4.5.4.58; python_version >= "3.6"
+pillow==8.4.0; python_version >= "3.7"
+protobuf==3.19.1; python_version >= "3.5"
+pyparsing==2.4.7; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
