--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "GNU General Public License v3.0"
 python = ">=3.7,<3.11"
 opencv-python = "^4.5.4"
 mediapipe = "^0.8.8"
+pyalsaaudio = {version = "^0.9.0", platform = "linux"}
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
