--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.7,<3.11"
 opencv-python = "^4.5.4"
 mediapipe = "^0.8.8"
 pyalsaaudio = {version = "^0.9.0", platform = "linux"}
+pycaw = {version = "^20181226", platform = "win32"}
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
