--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,9 @@ repos:
     rev: v2.29.0
     hooks:
     -   id: pyupgrade
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.782
+    hooks:
+    -   id: mypy
+        args: [--ignore-missing-imports, "--exclude", "windows_vol.py"]
