--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,4 +26,5 @@ repos:
     rev: v0.782
     hooks:
     -   id: mypy
-        args: [--ignore-missing-imports, "--exclude", "windows_vol.py"]
+        args: ["--ignore-missing-imports"]
+        exclude: "windows_vol.py"
