--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ license = "GNU General Public License v3.0"
 
 [tool.poetry.dependencies]
 python = ">=3.7,<3.10"
-opencv-python = "^4.5.4"
 mediapipe = "^0.8.8"
 pyalsaaudio = {version = "^0.9.0", platform = "linux"}
 pycaw = {version = "^20181226", platform = "win32"}
+opencv-python = "4.5.3.56"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
