--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,17 +14,15 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Install Black
-        run: pip install black
+
+      - name: Install black and isort and mypy
+        run: pip install black isort mypy
+
       - name: Run black
         run: black --check --diff .
 
-      - name: Install ISort
-        run: pip install isort
       - name: Run isort
         run: isort --profile black --diff .
 
-      - name: Install MyPy
-        run: pip install mypy
       - name: Run mypy
         run: mypy --ignore-missing-imports --exclude src/components/volume/windows_vol.py .
