--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,26 @@ isort = "^5.9.3"
 mypy = "^0.910"
 pytest = "^6.2.5"
 pre-commit = "^2.15.0"
-flake8 = "^4.0.1"
+
+[tool.black]
+include = '\.pyi?$'
+exclude = '''
+  /(
+      \.eggs
+    | \.git
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+'''
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-line-length = 79
-target-version = ['py36', 'py37', 'py38']
-include = '\.pyi?$'
