--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,9 @@ repos:
     -   id: mypy
         args: ["--ignore-missing-imports"]
         exclude: "windows_vol.py"
+
+-   repo: https://github.com/pycqa/flake8
+    rev: 4.0.1
+    hooks:
+    -   id: flake8
+        args: ["--ignore", "E203, E266, E501, W503, F403, F401", "--max-complexity", "18"]
