--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,10 @@ isort = "^5.9.3"
 mypy = "^0.910"
 pytest = "^6.2.5"
 pre-commit = "^2.15.0"
+flake8 = "^4.0.1"
 
 [tool.black]
+line-length = 79
 include = '\.pyi?$'
 exclude = '''
   /(
@@ -35,6 +37,7 @@ exclude = '''
     | dist
   )/
 '''
+
 [tool.isort]
 profile = "black"
 
