--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,4 +28,4 @@ jobs:
         run: mypy --ignore-missing-imports --exclude src/components/volume/windows_vol.py .
       
       - name: Run flake8
-        run: flake8 --ignore E203, E266, E501, W503, F403, F401 --max-complexity 18 .
+        run: flake8 --ignore=E203,E266,E501,W503,F403,F401 --max-complexity 18 .
