--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,10 +22,10 @@ jobs:
         run: black --check --diff .
 
       - name: Run isort
-        run: isort --profile black --diff .
+        run: isort --diff .
 
       - name: Run mypy
-        run: mypy --ignore-missing-imports --exclude src/components/volume/windows_vol.py .
+        run: mypy .
       
       - name: Run flake8
-        run: flake8 --ignore=E203,E266,E501,W503,F403,F401 --max-complexity 18 .
+        run: flake8 .
