--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,4 +33,4 @@ repos:
     rev: 4.0.1
     hooks:
     -   id: flake8
-        args: ["--ignore", "E203, E266, E501, W503, F403", "--max-complexity", "18"]
+        args: ["--ignore", "E203, E266, W503, F403", "--max-complexity", "18"]
