Create mouse module basic

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==21.2.0; python_version >= "2.7" and python_full_version < "3.0.0" or pyth
 comtypes==1.1.10; sys_platform == "win32"
 cycler==0.11.0; python_version >= "3.7"
 enum34==1.1.10; sys_platform == "win32"
+evdev==1.4.0; sys_platform in "linux"
 future==0.18.2; python_version >= "2.6" and python_full_version < "3.0.0" and sys_platform == "win32" or python_full_version >= "3.3.0" and sys_platform == "win32"
 kiwisolver==1.3.2; python_version >= "3.7"
 matplotlib==3.4.3; python_version >= "3.7"
@@ -15,6 +16,12 @@ protobuf==3.19.1; python_version >= "3.5"
 psutil==5.8.0; python_version >= "2.6" and python_full_version < "3.0.0" and sys_platform == "win32" or python_full_version >= "3.4.0" and sys_platform == "win32"
 pyalsaaudio==0.9.0; sys_platform == "linux"
 pycaw==20181226; sys_platform == "win32"
+pynput==1.7.5
+pyobjc-core==8.0; python_version >= "3.6" and sys_platform == "darwin"
+pyobjc-framework-applicationservices==8.0; python_version >= "3.6" and sys_platform == "darwin"
+pyobjc-framework-cocoa==8.0; python_version >= "3.6" and sys_platform == "darwin"
+pyobjc-framework-quartz==8.0; python_version >= "3.6" and sys_platform == "darwin"
 pyparsing==2.4.7; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+python-xlib==0.31; sys_platform in "linux"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform in "linux" or python_full_version >= "3.3.0" and sys_platform in "linux" and python_version >= "3.7"
