--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ mediapipe = "^0.8.8"
 pyalsaaudio = {version = "^0.9.0", platform = "linux"}
 pycaw = {version = "^20181226", platform = "win32"}
 opencv-python = "4.5.3.56"
+pynput = "^1.7.5"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
