--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,7 +2,7 @@ absl-py==0.15.0
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
 attrs==21.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 backports.entry-points-selectable==1.1.0; python_version >= "2.7" and python_full_version >= "3.6.1"
-black==21.9b0; python_full_version >= "3.6.2"
+black==21.10b0; python_full_version >= "3.6.2"
 cfgv==3.3.1; python_full_version >= "3.6.1"
 click==8.0.3; python_version >= "3.6" and python_full_version >= "3.6.2"
 colorama==0.4.4; sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.6.2" and platform_system == "Windows"
@@ -10,14 +10,17 @@ comtypes==1.1.10; sys_platform == "win32"
 cycler==0.11.0; python_version >= "3.7"
 distlib==0.3.3; python_full_version >= "3.6.1"
 enum34==1.1.10; sys_platform == "win32"
+evdev==1.4.0; sys_platform in "linux"
 filelock==3.3.2; python_version >= "3.6" and python_full_version >= "3.6.1"
+flake8==4.0.1; python_version >= "3.6"
 future==0.18.2; python_version >= "2.6" and python_full_version < "3.0.0" and sys_platform == "win32" or python_full_version >= "3.3.0" and sys_platform == "win32"
-identify==2.3.2; python_full_version >= "3.6.1"
+identify==2.3.3; python_full_version >= "3.6.1"
 importlib-metadata==4.2.0; python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.2"
 iniconfig==1.1.1; python_version >= "3.6"
 isort==5.9.3; python_full_version >= "3.6.1" and python_version < "4.0"
 kiwisolver==1.3.2; python_version >= "3.7"
 matplotlib==3.4.3; python_version >= "3.7"
+mccabe==0.6.1; python_version >= "3.6"
 mediapipe==0.8.8.1
 mypy-extensions==0.4.3; python_full_version >= "3.6.2" and python_version >= "3.5"
 mypy==0.910; python_version >= "3.5"
@@ -36,15 +39,23 @@ psutil==5.8.0; python_version >= "2.6" and python_full_version < "3.0.0" and sys
 py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pyalsaaudio==0.9.0; sys_platform == "linux"
 pycaw==20181226; sys_platform == "win32"
+pycodestyle==2.8.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+pyflakes==2.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+pynput==1.7.5
+pyobjc-core==8.0; python_version >= "3.6" and sys_platform == "darwin"
+pyobjc-framework-applicationservices==8.0; python_version >= "3.6" and sys_platform == "darwin"
+pyobjc-framework-cocoa==8.0; python_version >= "3.6" and sys_platform == "darwin"
+pyobjc-framework-quartz==8.0; python_version >= "3.6" and sys_platform == "darwin"
 pyparsing==2.4.7; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
 pytest==6.2.5; python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+python-xlib==0.31; sys_platform in "linux"
 pyyaml==6.0; python_version >= "3.6" and python_full_version >= "3.6.1"
 regex==2021.10.23; python_full_version >= "3.6.2"
-six==1.16.0; python_full_version >= "3.6.1" and python_version >= "3.7"
+six==1.16.0; python_full_version >= "3.6.1" and sys_platform in "linux" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7")
 toml==0.10.2; python_full_version >= "3.6.1" and python_version >= "3.6"
 tomli==1.2.2; python_version >= "3.6" and python_full_version >= "3.6.2"
 typed-ast==1.4.3; python_version < "3.8" and python_full_version >= "3.6.2" and python_version >= "3.5"
 typing-extensions==3.10.0.2; python_full_version >= "3.6.2" and python_version >= "3.6" and python_version < "3.8"
-virtualenv==20.9.0; python_full_version >= "3.6.1"
+virtualenv==20.10.0; python_full_version >= "3.6.1"
 zipp==3.6.0; python_version < "3.8" and python_version >= "3.6"
